--- a/about.html
+++ b/about.html
@@ -96,9 +96,13 @@
         </div>
       </div>
     </div>
-    <div class="mt-5" id="contact">
+    <div class="mt-5 mb-5" id="contact">
       <h2 class="text-center">📮 Contact me</h2>
-      <a href="mailto:shandelaide@gmail.com" class="email-link">
+      <a
+        href="mailto:shandelaide@gmail.com"
+        title="Addy's Email Address"
+        class="email-link"
+      >
         shandelaide@gmail.com
       </a>
     </div>
