--- a/index.html
+++ b/index.html
@@ -65,8 +65,15 @@
       🇺🇸 Front-end developer, based in the United States
     </h3>
     <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link">Contact me</a>
-      <a href="/about.html" class="about-link">About me</a>
+      <a
+        href="/about.html#contact"
+        title="Contact Information"
+        class="contact-link"
+        >Contact me</a
+      >
+      <a href="/about.html" title="To the About Page" class="about-link"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
@@ -86,7 +93,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="application-link">Launch Yoga App</a>
+            <a href="#" title="To Yoga Application" class="application-link"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -100,7 +109,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5 mb-5">
-            <a href="#" class="application-link">Launch Weather App</a>
+            <a href="#" title="To Weather Application" class="application-link"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
@@ -128,7 +139,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5 mb-5">
-            <a href="#" class="application-link">Launch Yogurt App</a>
+            <a href="#" title="To Yogurt Application" class="application-link"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
