--- a/about.html
+++ b/about.html
@@ -16,7 +16,9 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>About Addy López</title>
+    <title>
+      About Page & Contact Information | Addy López, Front-end Developer
+    </title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navigation-bar">
