--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Addy López</title>
+    <title>Home Page | Addy López, Front-end Developer</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navigation-bar">
