--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="col-sm-6">
           <img
             src="/images/yoga.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Yoga project"
           />
         </div>
@@ -121,7 +121,7 @@
         <div class="col-md-6">
           <img
             src="/images/weather.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Weather project"
           />
         </div>
@@ -130,7 +130,7 @@
         <div class="col-md-6">
           <img
             src="/images/yogurt.png"
-            class="img-fluid rounded"
+            class="img-fluid rounded d-none d-sm-block"
             alt="Yogurt project"
           />
         </div>
