Added media query for responsive styling

--- a/about.html
+++ b/about.html
@@ -65,11 +65,11 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
+    <h1 class="text-center mb-1">About me</h1>
     <h3 class="text-center">
       Front-end developer, based in Albuquerque, New Mexico
     </h3>
-    <div class="about-paragraphs text-center">
+    <div class="about-paragraph text-center">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
@@ -79,14 +79,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-4 about-images">
           <img
             src="/images/yoga.png"
             class="img-fluid p-2 rounded shadow"
             alt="Yoga project"
           />
         </div>
-        <div class="col-sm-4">
+        <div class="col-sm-4 about-images">
           <img
             src="/images/weather.png"
             class="img-fluid p-2 rounded shadow"
