--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </nav>
     <h2 class="text-center">👋 Hi, I am</h2>
-    <h1 class="text-center">Addy López</h1>
+    <h1 class="text-center mb-1">Addy López</h1>
     <h3 class="text-center">
       🇺🇸 Front-end developer, based in the United States
     </h3>
@@ -96,7 +96,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
+          <div class="mt-5 launch">
             <a href="#" title="To Yoga Application" class="application-link"
               >Launch Yoga App</a
             >
@@ -112,7 +112,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5 mb-5">
+          <div class="mt-5 mb-5 launch weather-application">
             <a href="#" title="To Weather Application" class="application-link"
               >Launch Weather App</a
             >
@@ -142,7 +142,7 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5 mb-5">
+          <div class="mt-5 mb-5 launch">
             <a href="#" title="To Yogurt Application" class="application-link"
               >Launch Yogurt App</a
             >
